# SweepTogether

./: .env.example  .gitignore  AGENT_CONTEXT.md  CLAUDE.md  DO_ARCHITECTURE.md  Dockerfile.cypress  Dockerfile.integration-tests  LICENSE  Makefile  PLANNING.md  README.md  SESSIONS.md  SESSION_GUIDELINES.md  TODO.md  cypress.config.js  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
agent_personas/: backend_developer.md  code_reviewer.md  devops_engineer.md  frontend_developer.md  persistence_expert.md  prompt_engineering_expert.md  testing_expert.md
backend/: Dockerfile  jest.config.js  package-lock.json  package.json  server.js  tsconfig.json
backend/native/: Cargo.toml
backend/native/.cargo/: config.toml
backend/native/src/: chunk_gen.rs  flood_fill.rs  lib.rs
docs/: DISCORD_ACTIVITY.md  FRONTEND_DIRECTION.md  GAMEPLAY_BUILD_STEPS.md  GAMEPLAY_DESIGN.md  GAMIFICATION_DESIGN.md
frontend/: .env.development  .env.example  Dockerfile  gameClient.js  index.html  main.js  nginx.conf  package-lock.json  package.json  script.js  style.css  tsconfig.json  vite.config.js
integration-tests/: TODO.md  bots_runner.py
nginx/: nginx.conf  nginx.prod.conf
prompts/: SESSION3_PROMPT.md  SESSION_00_Setup_Workflow_Definition.md  SESSION_01_Initial_Requirements_Clarification.md  SESSION_02_Project_Setup_Discussion.md  SESSION_03_Core_Game_Logic_Implementation.md  SESSION_04_E2E_Test_Setup_Cypress.md  SESSION_05_Debugging_E2E_Test_Failures.md  SESSION_17_MongoDB_Integration.md  (+39 more)
(+153 files in other folders)
