[package]
name = "sweeptogether_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
rayon = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
